manifests/base/networkpolicy/allow-backend-egress-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-egress-postgres
  namespace: taskapp
  annotations:
    argocd.argoproj.io/tracking-id: taskapp:networking.k8s.io/NetworkPolicy:taskapp/allow-backend-egress-postgres

spec:
  podSelector:
    matchLabels:
      app: backend

  policyTypes:
  - Egress

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - protocol: TCP
      port: 5432
