manifests/base/networkpolicy/allow-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-frontend
  namespace: taskapp

spec:
  podSelector:
    matchLabels:
      app: frontend

  policyTypes:
    - Ingress

  ingress:
    - ports:
        - protocol: TCP
          port: 80
