manifests/base/networkpolicy/allow-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres
  namespace: taskapp
spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress

  ingress:
    - from:
       - podSelector:
           matchExpressions:
             - key: app
               operator: In
               values:
                 - backend

      ports:
        - protocol: TCP
          port: 5432
